data/derived/comb/progs/unify/prog1117.ml.out
Characters 45-53:
  let fixpoint (f,b) = wwhile(let g x = f x in g b != b, b);;
                                               ^^^^^^^^
Error: This expression has type bool but an expression was expected of type
         'a -> 'a * bool
